--- a/inkup/package.json
+++ b/inkup/package.json
@@ -27,6 +27,7 @@
     "react-icons": "^5.5.0",
     "react-konva": "^19.0.7",
     "react-sketch-canvas": "^6.2.0",
+    "react-spinners": "^0.17.0",
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.6",
     "zod": "^3.25.67",
