--- a/inkup/package.json
+++ b/inkup/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/core": "^0.40.0",
+    "@headlessui/react": "^2.2.4",
     "@hookform/resolvers": "^5.1.1",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
