--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "dependencies": {
     "@prisma/client": "^6.11.1",
+    "@sentry/node": "^5.27.6",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
