--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@fal-ai/client": "^1.6.2",
     "@prisma/client": "^6.11.1",
     "@sentry/node": "^5.27.6",
     "axios": "^1.10.0",
