--- a/inkup/package.json
+++ b/inkup/package.json
@@ -14,12 +14,14 @@
     "@hookform/resolvers": "^5.1.1",
     "@sentry/nextjs": "^10.3.0",
     "axios": "^1.10.0",
+    "browser-image-compression": "^2.0.2",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.19.1",
     "gsap": "^3.13.0",
     "konva": "^9.3.22",
     "lucide-react": "^0.523.0",
+    "mixpanel-browser": "^2.68.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
