--- a/inkup/package.json
+++ b/inkup/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^4.1.0",
     "framer-motion": "^12.19.1",
     "gsap": "^3.13.0",
+    "heic-to": "^1.2.2",
     "konva": "^9.3.22",
     "lucide-react": "^0.523.0",
     "mixpanel-browser": "^2.68.0",
