--- a/inkup/package.json
+++ b/inkup/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.523.0",
     "mixpanel-browser": "^2.68.0",
     "next": "15.3.4",
+    "pixi.js": "^8.13.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-draggable": "^4.5.0",
