--- a/inkup/package.json
+++ b/inkup/package.json
@@ -12,6 +12,7 @@
     "@auth/core": "^0.40.0",
     "@headlessui/react": "^2.2.4",
     "@hookform/resolvers": "^5.1.1",
+    "@huggingface/transformers": "^3.7.5",
     "@sentry/nextjs": "^10.3.0",
     "axios": "^1.10.0",
     "browser-image-compression": "^2.0.2",
